--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -12,6 +12,11 @@ on:
         type: boolean
         description: 'Is this a pre-release?'
         required: false
+      actor:
+        type: string
+        description: 'Github actor'
+        required: true
+        default: ${{ github.actor }}
   workflow_call:
     inputs:
       version:
@@ -22,14 +27,16 @@ on:
         type: boolean
         description: 'Is this a pre-release?'
         required: false
+      actor:
+        type: string
+        description: 'Github actor'
+        required: true
+        default: ${{ github.actor }}
 
 
 jobs:
   bump-version:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        owner: ${{ github.actor }}
     outputs:
       prev_version: ${{ steps.bump_version_step.outputs.prev_version }}
     steps:
@@ -44,7 +51,7 @@ jobs:
             filename: './.github/workflows/config.json'
             prefix: config
       - name: Test permissions
-        uses: ${{ matrix.owner }}/editor-actions/permissions@master
+        uses: ${{ github.event.inputs.actor }}/editor-actions/permissions@master
       - name: Install Node.js 14.x
         uses: actions/setup-node@v2
         with:
