--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -29,7 +29,12 @@ jobs:
     runs-on: ubuntu-20.04
     outputs:
       prev_version: ${{ steps.bump_version_step.outputs.prev_version }}
+      current_actor: ${{ setps.bump_version_step.outputs.current_actor }}
     steps:
+      - name: Get Actor
+        id: get_actor_step
+        run: |
+          echo "::set-output name=current_actor::${{{ github.actor }}}"
       - name: Checkout branch
         uses: actions/checkout@v3
         with:
@@ -41,7 +46,7 @@ jobs:
             filename: './.github/workflows/config.json'
             prefix: config
       - name: Test permissions
-        uses: github.actor/editor-actions/permissions@master
+        uses: ${{ needs.bump-version.outputs.current_actor }}/editor-actions/permissions@master
       - name: Install Node.js 14.x
         uses: actions/setup-node@v2
         with:
