--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -40,7 +40,7 @@ jobs:
             filename: './.github/workflows/config.json'
             prefix: config
       - name: Test permissions
-        uses: editor-actions/permissions@master
+        uses: "$(git remote show origin -n | grep h.URL | sed 's/.*://;s/.git$//')editor-actions/permissions@master"
         with:
           user: "${{ github.actor }}"
       - name: Install Node.js 14.x
