--- a/.github/workflows/config.json
+++ b/.github/workflows/config.json
@@ -1,7 +1,7 @@
 {
   "deployment" : { 
     "repository" : "elementor",
-    "envirement" : "prod",
-    "permitted" : "KingYes,shilo-ey,matipojo,"
+    "environment" : "prod",
+    "permitted" : "KingYes,shilo-ey,matipojo"
   }
 }
