--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ coverage/
 test-results/
 tests/playwright/config/storageState.json
 tests/playwright/config/local.config.js
+
+# playwright - elements-regression
+tests/elements-regression/.env
+tests/elements-regression/.storageState.json
+
