--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "babel-loader": "8.2.5",
         "chalk": "^4.1.0",
         "cssnano": "4.1.11",
+        "dotenv": "^16.0.1",
         "eslint": "^8.19.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-jsx-a11y": "^6.6.0",
