--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           ENVIRONMENT: ${{ env.config_deployment_environment }}
           DEPLOYMENT_PERMITTED: ${{ env.config_deployment_permitted }}
-          DEPLOYMENT_REPOSITORY: ${{ github.config_deployment_repository }}
+          DEPLOYMENT_REPOSITORY: ${{ env.config_deployment_repository }}
       - name: Install Node.js 16.x
         uses: actions/setup-node@v2
         with:
