--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,9 +1,10 @@
 blank_issues_enabled: false
 contact_links:
   - name: ❓ Support Question
+    url: https://wordpress.org/support/plugin/elementor/
     about: Please create GitHub issues only for bugs and feature requests. GitHub issues ARE NOT FOR SUPPORT!
   - name: Elementor Support
-    url: https://wordpress.org/support/plugin/elementor
+    url: https://elementor.com/support/
     about: If you have questions or need general support, please use this.
   - name: Elementor Community Support
     url: https://www.facebook.com/groups/Elementors/
