Internal: Run PHP Unit Action when composer.json is modified

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           PATTERNS: |
             **/*.php
+            composer.json
 
   test:
     runs-on: ubuntu-18.04 # It is ubuntu 18 because there are some issues with the mysql version and php 7.
