--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -100,7 +100,8 @@ jobs:
         uses: ./.github/workflows/build-plugin
         with:
           PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }}
-          SCRIPT_PATH: "./.github/scripts/build-zip.sh"
+          UPDATE_VERSIONS_SCRIPT_PATH: "./.github/scripts/update-plugin-versions"
+          BUILD_SCRIPT_PATH: "./.github/scripts/build-zip.sh"
       - name: Upload zip file to GitHub actions artifact
         uses: actions/upload-artifact@v2
         with:
