--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "test:qunit": "grunt qunit",
         "test:playwright": "playwright test \"--config=tests/playwright/config/sanity.config.js\"",
         "test:playwright:local": "playwright test \"--config=tests/playwright/config/local.config.js\"",
+        "test:playwright:update-snapshots": "bash ./bin/update-elements-reggression-snapshots.sh",
         "test:playwright:debug": "npm run test:playwright -- --debug",
         "dev:start": "npm install && composer install",
         "test:jest": "jest --config='./tests/jest/jest.config.js'",
