--- a/.github/workflows/push-new-version/action.yml
+++ b/.github/workflows/push-new-version/action.yml
@@ -4,9 +4,12 @@ description: Git push the new version to the remote repository.
 inputs:
   MAINTAIN_USERNAME:
     required: true
+    description: The username of the maintainer.
   MAINTAIN_EMAIL:
     required: true
+    description: The email of the maintainer.
   COMMIT_MESSAGE:
+    description: The commit message.
     required: true
 
 runs:
