Internal: Add token to Checkout next release branch [ED-8055]

--- a/.github/workflows/publish-cloud.yml
+++ b/.github/workflows/publish-cloud.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ env.RELEASE_BRANCH }}
+          token: ${{ secrets.MAINTAIN_TOKEN }}
       - name: Get Current SHA
         shell: bash
         run: |
