Internal: Disable Dev Edition

--- a/.github/workflows/sync-branches.yml
+++ b/.github/workflows/sync-branches.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           bash "${GITHUB_WORKSPACE}/.github/scripts/sync-developer-edition-branch.sh"
       - name: Sync feature branches into developer-edition branch
+        if: ${{ false }} # Disabled for now
         env:
           TOKEN: ${{ secrets.MAINTAIN_TOKEN }}
           REPOSITORY: ${{ github.repository }}
