--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,5 @@
 name: "🐞 Bug Report"
 description: "Report a bug if something isn't working as expected in Elementor"
-title: "🐞 Bug report: "
 labels: ["bug"]
 body:
   - type: markdown
@@ -8,19 +7,9 @@ body:
       value: |
         ## BEFORE POSTING YOUR ISSUE
 
-        - Please create GitHub issues only for bugs and feature requests. GitHub issues ARE NOT FOR SUPPORT!
+        - Please create GitHub issues only for Elementor bugs. GitHub issues ARE NOT FOR SUPPORT.
 
-        - If you have questions or need general support, please use:  https://wordpress.org/support/plugin/elementor
-
-        - For help and support from the Elementor community, see: https://www.facebook.com/groups/Elementors/
-
-        - To read more about Elementor, check out our documentation: https://docs.elementor.com
-
-        - Developers docs are located at https://developers.elementor.com/
-
-        ### Guidelines
-
-        - Search this repository (top of the page) for the issue, and make sure it has not been fixed or reported before.
+        - To avoide duplicates, please search this repository for the issue.
 
         - If the issue can't be recreated on other sites, it's not an Elementor bug. In that case use the support links above.
 
@@ -28,11 +17,9 @@ body:
 
         - Deactivate all of your plugins. If this solves the problem, gradually activate your plugins one by one, until you spot the problematic plugin.
 
-        - Change your WordPress theme to [Hello theme](https://wordpress.org/themes/hello-elementor/) (or other default WordPress theme).
+        - Change your WordPress theme to [Hello theme](https://wordpress.org/themes/hello-elementor/).
 
-        - If you're requesting a new feature, explain why you'd like it to be added in [the dedicated form](https://github.com/elementor/elementor/issues/new?assignees=&labels=&template=feature_request.yaml) and not in the bug report one.
-
-        ## The Issue
+        ## THE ISSUE
   - type: checkboxes
     id: prerequisites
     attributes:
@@ -47,18 +34,16 @@ body:
     validations:
       required: true
     attributes:
-      label: "Description"
-      description: "Describe which problem you've encountered. What caused the issue, and what did you expect to happen. Attach screenshots and related links to help us understand the issue in more detail.
-      Please be as descriptive as possible; issues lacking the below details, or for any other reason than to report a bug, may be closed without action."
-      placeholder: "When I ..."
+      label: "Description - expected result vs. actual result"
+      description: "Describe the problem. What caused the issue? What did you expect to happen and what actual happen? Please be as descriptive as possible. Attach screenshots and related links.
   - type: textarea
     id: steps_to_reproduce
     validations:
       required: true
     attributes:
       label: "Steps to reproduce"
-      description: "For bug reports, list all the steps needed to reproduce your issue, so we can replicate it ourselves."
-      placeholder: "Verify that ..."
+      description: "List all the steps needed to reproduce the issue, so we can replicate it ourselves."
+      placeholder: "1) ... 2) ... 3) ..."
   - type: checkboxes
     id: isolating_the_problem
     attributes:
@@ -67,14 +52,10 @@ body:
         - label: "This bug happens with only Elementor plugin active (and Elementor Pro)."
         - label: "This bug happens with a Blank WordPress theme active ([Hello theme](https://wordpress.org/themes/hello-elementor/))."
         - label: "I can reproduce this bug consistently using the steps above."
-  - type: markdown
-    attributes:
-      value: |
-        ## Environment
   - type: textarea
     id: system_info
     validations:
       required: true
     attributes:
       label: "System Info"
-      description: "For bug reports, let us know about your system environment: Copy and paste the system info report from Elementor => System info, and paste it here or in https://pastebin.com/"
+      description: "For faster debugging copy your system environment from `Elementor` => `System info`, and paste it here or in https://pastebin.com/"
