Tweak: Update bug report template

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,7 @@
 name: "🐞 Bug Report"
 description: "Report a bug if something isn't working as expected in Elementor"
 labels: ["bug"]
+title: ""
 body:
   - type: markdown
     attributes:
@@ -34,7 +35,7 @@ body:
     validations:
       required: true
     attributes:
-      label: "Description - expected result vs. actual result"
+      label: "Description"
       description: "Describe the problem. What caused the issue? What did you expect to happen and what actual happen? Please be as descriptive as possible. Attach screenshots and related links.
   - type: textarea
     id: steps_to_reproduce
