Run lint also on change phpcs.xml

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           PATTERNS: |
             **/*.php
-
+            phpcs.xml
 
   JS-Lint:
     runs-on: ubuntu-18.04
