--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           PATTERNS: |
             **/*.php
-            phpcs.xml
+            ruleset.xml
 
   JS-Lint:
     runs-on: ubuntu-18.04
@@ -71,7 +71,7 @@ jobs:
           composer require php-parallel-lint/php-parallel-lint
       - name: Run Lint
         run: |
-          vendor/bin/phpcs -p -s -n . --standard=./phpcs.xml --extensions=php
+          vendor/bin/phpcs -p -s -n . --standard=./ruleset.xml --extensions=php
       - name: Run PHP Syntax Lint
         run: |
           export PATH=$HOME/.composer/vendor/bin:$PATH
