Change the label to "status/awaiting_triage"

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,6 @@
 name: "🐞 Bug Report"
 description: "Report a bug if something isn't working as expected in Elementor"
-labels: ["bug"]
+labels: ["status/awaiting_triage"]
 body:
   - type: markdown
     attributes:
