--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: "🚀 Feature Request"
 description: "Suggest an idea for this project"
-title: "🚀 Feature Request: "
-labels: ["request"]
+title: ""
+labels: ["status/awaiting_triage"]
 body:
   - type: markdown
     attributes:
