--- a/packages/editor/packages/history/package.json
+++ b/packages/editor/packages/history/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:watch": "tsc && vite build --watch",
-    "preview": "vite preview"
+    "build:watch": "tsc && vite build --watch"
   },
   "peerDependencies": {
-	"react": "^18.2.0"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
