--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "author": "Elementor Team",
   "license": "GPL-3.0-or-later",
