--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -2,6 +2,20 @@ name: Build Packages
 on: [ push, pull_request ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    if: startsWith( github.repository, 'elementor/' )
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+      - name: Install Dependencies
+        run: cd ./packages/editor && npm ci && npm run lint
+      - name: Lint
+        run: npm run lint
+
   build:
     runs-on: ubuntu-latest
     if: startsWith( github.repository, 'elementor/' )
