--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "test:playwright:local": "playwright test \"--config=tests/playwright/config/local.config.js\"",
         "test:playwright:debug": "npm run test:playwright -- --debug",
         "test:elements-regression": "playwright test \"--config=tests/elements-regression/playwright.config.js\"",
-        "test:elements-regression:local": "playwright test \"--config=tests/elements-regression/local.config.js\"",
         "test:elements-regression:update-snapshots": "bash ./bin/update-elements-reggression-snapshots.sh",
         "dev:start": "npm install && composer install",
         "test:jest": "jest --config='./tests/jest/jest.config.js'",
@@ -45,6 +44,7 @@
         "babel-loader": "8.2.5",
         "chalk": "^4.1.0",
         "cssnano": "4.1.11",
+        "dotenv": "^16.0.2",
         "eslint": "^8.19.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-jsx-a11y": "^6.6.0",
