Internal: Elements Regression - Use config [ED-8228] (#19824)

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
         "test:playwright": "playwright test \"--config=tests/playwright/config/sanity.config.js\"",
         "test:playwright:local": "playwright test \"--config=tests/playwright/config/local.config.js\"",
         "test:playwright:debug": "npm run test:playwright -- --debug",
-        "test:elements-regression": "playwright test \"--config=tests/elements-regression/config/playwright.config.js\"",
-        "test:elements-regression:local": "playwright test \"--config=tests/elements-regression/config/local.config.js\"",
-        "test:elements-regression:update-snapshots": "bash ./bin/update-elements-reggression-snapshots.sh",
+        "test:elements-regression": "playwright test \"--config=tests/elements-regression/playwright.config.js\"",
+        "test:elements-regression:linux": "node ./tests/elements-regression/scripts/run-on-linux.js",
         "dev:start": "npm install && composer install",
         "test:jest": "jest --config='./tests/jest/jest.config.js'",
         "scripts": "grunt scripts",
@@ -46,6 +45,7 @@
         "babel-loader": "8.2.5",
         "chalk": "^4.1.0",
         "cssnano": "4.1.11",
+        "dotenv": "^16.0.2",
         "eslint": "^8.19.0",
         "eslint-plugin-babel": "^5.3.1",
         "eslint-plugin-jsx-a11y": "^6.6.0",
