--- a/tests/elements-regression/.env.example
+++ b/tests/elements-regression/.env.example
@@ -2,3 +2,4 @@ ELEMENTS_REGRESSION_BASE_URL=http://localhost:8889/
 ELEMENTS_REGRESSION_WP_USERNAME=admin
 ELEMENTS_REGRESSION_WP_PASSWORD=password
 ELEMENTS_REGRESSION_VIDEO=off
+ELEMENTS_REGRESSION_VALIDATE_ALL_PREVIOUS_TEST_CASES=off
